lowered z-index on the accoridon class, fixed the parallaxDown - changed order

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -389,7 +389,7 @@ h1 {
 }
 
 .accordion > .card {
-  z-index: 1200;
+  z-index: 900;
 }
 .indivProject {
   display: flex;
